# drumgen

./: README.md  pyproject.toml
drumgen/: grids.py  resources_drum_map.py  resources_euclidean.py  tulip_grids.py
scripts/: convert_resources_cc.py
scripts/tulip/: get.py  tworld_grids.py
